--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -247,6 +247,7 @@ p {
 }
 
 .star {
+  cursor: pointer;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -293,6 +294,7 @@ p {
 }
 
 .actionButton {
+  cursor: pointer;
   font-size: 1.25rem;
   font-weight: 400;
   padding: 0.75rem 1.5rem;
@@ -967,6 +969,7 @@ code {
     padding: 6.8px;
     border-radius: 5px;
     opacity: 0.4;
+    position: absolute;
     left: 95%;
     top: 0.5rem;
   }
@@ -1061,6 +1064,8 @@ code {
   .videoContent_first_right iframe,
   .videoContent_second_right iframe {
     width: 100%;
+    height: auto;
+    aspect-ratio: 2/1;
   }
   .community_desc {
     display: flex;
@@ -1154,6 +1159,9 @@ code {
 @media screen and (max-width: 480px) {
   .headerHero_left {
     align-items: flex-start;
+  }
+  .headerHero_left .title, .headerHero_left .tagline {
+    text-align: start;
   }
   .actionButton {
     width: 100%;
