--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -370,13 +370,14 @@ p {
 
 .nativeApps_left {
   width: 100%;
+  min-width: 50%;
+  // max-width: 450px;
   padding-right: 50px;
-  max-height: 400px;
   margin-top: -25px;
 }
 
 .nativeApps_left img {
-  height: 520px;
+  max-width: 100%;
 }
 
 .nativeApps_right {
@@ -776,6 +777,7 @@ code {
 
 .step_name {
   margin-bottom: 20px;
+  font-weight: 300;
 }
 
 .footer {
@@ -1046,13 +1048,13 @@ code {
   .nativeApps_left {
     padding-right: 0px;
     margin-top: 0px;
-    display: flex;
     justify-content: center;
+    width: 66.67%;
     max-height: 300px;
   }
 
   .nativeApps_left img {
-    width: 66.66%;
+    // width: 66.66%;
   }
 
   .nativeApps_right {
@@ -1307,9 +1309,9 @@ code {
   }
 }
 
-@media screen and (max-width: 552px) {
+@media screen and (max-width: 576px) {
   .nativeApps_left img {
-    width: 100%;
+    // width: 100%;
   }
   .native_development_img {
     width: 80%;
@@ -1353,6 +1355,10 @@ code {
   }
   .section {
     padding: 50px 20px;
+  }
+
+  .nativeApps_left {
+    width: 100%;
   }
 
   .nativeDevelopment {
