--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -502,14 +502,14 @@ p {
 
 .nativeDevelopment_left {
   width: 50%;
-  position: relative;
   margin-top: -30px;
+  max-height: 330px;
 }
 
 .native_development_img {
-  width: 400px;
-  max-height: 370px;
-  position: absolute;
+  max-width: 100%;
+  // max-height: 370px;
+  // position: absolute;
 }
 
 .nativeDevelopment_right {
@@ -900,18 +900,6 @@ code {
     display: none;
   }
 
-  // .navbar__toggle:hover .navbar-sidebar {
-  //   font-size: 17px;
-  //   display: block;
-  //   position: absolute;
-  //   z-index: 1;
-  //   background-color: white;
-  //   top: 0;
-  //   left: 0;
-  //   width: 350px;
-  //   height: 100vh;
-  // }
-
   .sidebar_lightMode_icon:hover {
     background-color: #444950;
     border-radius: 50%;
@@ -978,6 +966,7 @@ code {
 
   .sidebar_dropdown_items {
     display: none;
+    width: 100% !important;
     // position: absolute;
     // left: 340px;
     top: 0px;
@@ -997,18 +986,14 @@ code {
   }
 
   .sidebar_dropdown_items li {
+    width: 100%;
     margin: 5px 0px;
     padding: 5px;
+    font-size: 13px;
   }
 
   .sidebar_dropdown {
     position: relative;
-  }
-
-  .sidebar_dropdown:hover {
-    .sidebar_dropdown_items {
-      // display: block;
-    }
   }
 
   .sidebar_dropdown_items {
@@ -1049,7 +1034,7 @@ code {
     padding-right: 0px;
     margin-top: 0px;
     justify-content: center;
-    width: 66.67%;
+    width: 66%;
     max-height: 300px;
   }
 
@@ -1065,6 +1050,7 @@ code {
     flex-direction: column;
     align-items: center;
     padding: 0px;
+    gap: 2rem;
   }
 
   .nativeCode_left {
@@ -1088,15 +1074,16 @@ code {
     margin-bottom: 0px;
     overflow: auto;
     background-color: #282c34;
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     position: relative;
+    border: 2px solid red;
   }
 
   .nativeCode_right_content {
-    max-width: inherit;
-    width: 100vw;
+    // width: fit-content;
     padding: 0px;
+    border: 2px solid green;
   }
 
   .copy-btn {
@@ -1113,14 +1100,9 @@ code {
 
   .nativeCode_code_content {
     width: fit-content;
-    display: flex;
-    justify-content: center;
-    // gap: 2rem;
     margin: 0 auto;
     position: inherit;
-    top: inherit;
     padding-top: 50px;
-    // padding-bottom: 0px;
   }
 
   .nativeDevelopment {
@@ -1132,17 +1114,17 @@ code {
   }
 
   .nativeDevelopment_left {
-    width: 100%;
-    margin-top: 0px;
-    height: 250px;
-    display: flex;
-    justify-content: center;
+    width: 66%;
+    // margin-top: 0px;
+    margin: 0 auto;
+    // height: 250px;
+    min-height: 300px;
   }
 
-  .native_development_img {
-    width: 80%;
-    position: absolute;
-  }
+  // .native_development_img {
+  //   width: 80%;
+  //   position: absolute;
+  // }
 
   .nativeDevelopment_right {
     width: 100%;
@@ -1177,9 +1159,6 @@ code {
   //////////////////////////
 
   .fastRefresh {
-    max-width: 100%;
-    margin: 0;
-    display: flex;
     flex-direction: column-reverse;
     gap: 2rem;
     padding-bottom: 0px;
@@ -1302,6 +1281,7 @@ code {
 
   .getStarted_content {
     width: 80%;
+    // padding-left: 20px;
   }
 
   .terminal {
@@ -1310,13 +1290,9 @@ code {
 }
 
 @media screen and (max-width: 576px) {
-  .nativeApps_left img {
-    // width: 100%;
-  }
-  .native_development_img {
-    width: 80%;
-    max-height: auto;
-    position: absolute;
+
+  .nativeDevelopment_left {
+    width: 100%;
   }
 
   .buttons {
@@ -1361,16 +1337,22 @@ code {
     width: 100%;
   }
 
+  
+
   .nativeDevelopment {
     padding: 50px 20px;
+  }
+
+  .nativeCode_content {
+    gap: 0;
   }
 
   .nativeCode_left {
     padding: 50px 20px 0px 20px;
   }
 
+
   .nativeCode_code_content {
-    width: 100%;
     padding-left: 20px;
   }
 
