--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -523,6 +523,7 @@ p {
 }
 
 .fastRefresh {
+  padding: 50px 0px;
   max-width: 900px;
   display: flex;
   margin: 0 auto;
@@ -954,11 +955,9 @@ code {
     overflow: auto;
     background-color: #282c34;
     position: relative;
-    border: 2px solid red;
   }
   .nativeCode_right_content {
     padding: 0px;
-    border: 2px solid green;
   }
   .copy-btn {
     color: white;
@@ -1016,7 +1015,8 @@ code {
   .fastRefresh {
     flex-direction: column-reverse;
     gap: 2rem;
-    padding-bottom: 0px;
+    padding: 50px 68px;
+    max-width: 100%;
   }
   .fastRefresh_left {
     margin: 0px -68px;
@@ -1104,6 +1104,7 @@ code {
   .nativeCode_code_content {
     padding-left: 0;
     padding-right: 0;
+    white-space: nowrap;
   }
   .copy-btn {
     left: 90%;
@@ -1165,6 +1166,9 @@ code {
   }
   .nativeCode_code_content {
     padding-left: 20px;
+  }
+  .fastRefresh {
+    padding: 50px 20px;
   }
   .copy-btn {
     left: 85%;
