--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -538,7 +538,6 @@ p {
 
 .fastRefresh_right {
   width: 33.33%;
-  max-width: 450px;
   padding-left: 50px;
 }
 
@@ -1015,11 +1014,11 @@ code {
   .fastRefresh {
     flex-direction: column-reverse;
     gap: 2rem;
-    padding: 50px 68px;
+    padding: 50px 0px;
     max-width: 100%;
   }
   .fastRefresh_left {
-    margin: 0px -68px;
+    margin: 0px;
     margin-bottom: -50px;
   }
   .fastRefresh video {
@@ -1027,9 +1026,8 @@ code {
     height: auto;
   }
   .fastRefresh_right {
-    max-width: inherit;
+    padding: 0px 68px;
     width: 100%;
-    padding-left: 0px;
   }
   .videoContent_first,
   .videoContent_second {
@@ -1167,8 +1165,8 @@ code {
   .nativeCode_code_content {
     padding-left: 20px;
   }
-  .fastRefresh {
-    padding: 50px 20px;
+  .fastRefresh_right {
+    padding: 0px 20px;
   }
   .copy-btn {
     left: 85%;
