--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -1,5 +1,3 @@
-// @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
-
 @font-face {
   font-family: "OptimisticDisplay";
   src: url(./fonts/OptimisticDisplayBold.woff2);
@@ -42,13 +40,12 @@ p {
   padding: 0px;
 }
 
-p {
-  // line-height: 27px;
-}
+/************* NAVBAR ****************/
 
 .react-native-title {
   font-size: 18px;
   font-weight: 600;
+  font-family: "OptimisticDisplay";
 }
 
 .react-native-title:hover {
@@ -57,24 +54,10 @@ p {
 
 .navbar {
   background-color: #20232a;
-  color: rgb(245, 246, 247);
   position: sticky;
   top: 0;
-  font-weight: 500;
   padding: 0px 16px;
   z-index: 1;
-}
-
-.navbar-sidebar {
-  display: none;
-  font-size: 17px;
-  position: absolute;
-  z-index: 1;
-  background-color: white;
-  top: 0;
-  left: 0;
-  width: 350px;
-  height: 100vh;
 }
 
 .navbar_inner {
@@ -101,20 +84,22 @@ p {
   flex: 1;
   align-items: center;
   cursor: pointer;
+  color: rgb(245, 246, 247);
 }
 
 .react-native-icon {
   margin-right: 10px;
 }
 
-.navbar_items a {
-  text-decoration: none;
-  color: white;
+.navbar_items {
+  a {
+    color: rgb(245, 246, 247);
+    text-decoration: none;
+  }
 }
 
 .navbar_items--right {
   flex: 0 0 auto;
-  justify-content: flex-end;
 }
 
 .navbar_item {
@@ -155,18 +140,25 @@ p {
 .seach_placeholder {
   color: rgb(150, 159, 175);
   font-size: 14px;
-  font-weight: 500;
+  font-family: "OptimisticDisplay";
 }
 
 .searchButton {
   display: flex;
   align-items: center;
   cursor: pointer;
-  color: gray;
   border: none;
   border-radius: 5px;
   overflow: hidden;
   padding: 0px 5px;
+  background: #e3e3e3;
+}
+
+.searchButton:hover {
+  background: #f8f7f7;
+  .seach_placeholder {
+    color: #3f4042;
+  }
 }
 
 .searchButton {
@@ -181,12 +173,12 @@ p {
   display: flex;
   align-items: center;
   gap: 5px;
+  padding-bottom: 5px;
 }
 
 .dropdown_items {
   display: none;
   position: absolute;
-  margin-top: 5px;
   background-color: white;
   color: gray;
   list-style: none;
@@ -212,10 +204,123 @@ p {
   }
 }
 
+.dropdown:hover {
+  .dropdown_items {
+    display: block;
+  }
+}
+
+/********************** NAVBAR SIDEBAR ****************/
+
+.navbar-sidebar {
+  display: none;
+  font-size: 17px;
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  color: white;
+  top: 0;
+  left: 0;
+  width: 350px;
+  height: 100vh;
+}
+
+.sidebar_lightMode_icon:hover {
+  background-color: #444950;
+  border-radius: 50%;
+}
+
+.sidebar_close_btn:hover {
+  background-color: #444950;
+}
+
+.navbar-sidebar-brand {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  background-color: #20232a;
+}
+
+.navbar-sidebar-brand_left {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-sidebar-links {
+  color: #606770;
+  font-family: "OptimisticDisplay";
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 17px;
+  width: 100%;
+}
+
+.navbar-sidebar-links a {
+  text-decoration: none;
+  color: #606770;
+  font-family: "OptimisticDisplay";
+  font-weight: 400;
+  width: 100%;
+  text-align: start;
+}
+
+.navbar-sidebar-item {
+  padding: 4px 12px;
+  width: 100%;
+}
+
+.navbar-sidebar-item:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+}
+
+.sidebar_dropdown_title {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 5px;
+}
+
+.sidebar_dropdown_items {
+  display: none;
+  width: 100% !important;
+  top: 0px;
+  color: gray;
+  text-align: start;
+  list-style: none;
+  font-weight: 100;
+  border-radius: 10px;
+  width: 180px;
+  font-size: 0.975rem;
+}
+
+.sidebar_dropdown_items li {
+  width: 100%;
+  margin: 5px 0px;
+  padding: 5px;
+  font-size: 13px;
+}
+
+.sidebar_dropdown_items {
+  li:hover {
+    background-color: rgb(230, 228, 228);
+    border-radius: 5px;
+    color: black;
+  }
+}
+
+/*********************** MAIN CONTENT ****************/
 .section {
   padding: 50px 0px;
-  //   overflow: hidden;
 }
+
+/*********************** HEADER_HERO SECTION-1 *********/
 
 .headerHero {
   background-color: #282c34;
@@ -357,6 +462,8 @@ p {
   font-weight: 100;
 }
 
+/*********************** NATIVE_APPS SECTION-2 *********/
+
 .nativeApps {
   width: 100%;
   max-width: 900px;
@@ -371,7 +478,6 @@ p {
 .nativeApps_left {
   width: 100%;
   min-width: 50%;
-  // max-width: 450px;
   padding-right: 50px;
   margin-top: -25px;
 }
@@ -384,13 +490,13 @@ p {
   padding-left: 50px;
 }
 
-// .nativeApps_right {
 .heading {
   font-size: 25px;
   font-weight: 700;
   line-height: 1.2;
 }
-// }
+
+/******************** NATIVE_CODE SECTION-3 ***********/
 
 .nativeCode {
   background-color: #f2f2f2;
@@ -423,7 +529,6 @@ p {
 }
 
 .nativeCode_right_content {
-  // max-width: 450px;
   padding: 16px 1.5rem;
   color: white;
 }
@@ -471,17 +576,13 @@ p {
   color: rgb(197, 165, 197);
 }
 
-.import {
-  /* font-size: small; */
-}
-
 .module {
   color: rgb(141, 200, 145);
 }
 
 .punctuation {
   color: rgb(101, 123, 131);
-  margin: -3px;
+  margin: 0px -3px;
 }
 
 .element {
@@ -491,6 +592,8 @@ p {
 .plain {
   white-space: pre !important;
 }
+
+/********************** NATIVE_dEVELOPMENT SECTION-4 *******************/
 
 .nativeDevelopment {
   max-width: 900px;
@@ -508,8 +611,6 @@ p {
 
 .native_development_img {
   max-width: 100%;
-  // max-height: 370px;
-  // position: absolute;
 }
 
 .nativeDevelopment_right {
@@ -526,6 +627,8 @@ p {
     "Courier New", monospace;
   padding: 0.1rem;
 }
+
+/********************** CROSS_PLATFORM SECTION-5 *******************/
 
 .crossPlatform {
   background-color: #f2f2f2;
@@ -556,6 +659,8 @@ p {
   font-family: "OptimisticDisplay";
 }
 
+/********************** FAST_REFRESH SECTION-6 *******************/
+
 .fastRefresh {
   padding: 50px 0px;
   max-width: 900px;
@@ -565,16 +670,16 @@ p {
 }
 
 .fastRefresh_left {
-  overflow: hidden;
   margin: -50px 0px;
   max-height: 348px;
 }
-
 
 .fastRefresh_right {
   width: 33.33%;
   padding-left: 50px;
 }
+
+/********************** VIDEO_CONTENT SECTION-7 ****************/
 
 .videoContent {
   background-color: #f2f2f2;
@@ -585,7 +690,8 @@ p {
   margin: 0 auto;
 }
 
-.videoContent_first {
+.videoContent_first,
+.videoContent_second {
   display: flex;
 }
 
@@ -608,10 +714,6 @@ p {
   border: none;
 }
 
-.videoContent_second {
-  display: flex;
-}
-
 .lightBlue_button {
   background-color: rgba(187, 239, 253, 0.3);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -619,6 +721,8 @@ p {
   color: black;
   line-height: 21px;
 }
+
+/************************* COMMUNITY SECTION-8 ************************/
 
 .community {
   max-width: 900px;
@@ -631,11 +735,6 @@ p {
 
 .community_desc {
   display: flex;
-}
-
-.community_desc_intro {
-  display: flex;
-  gap: 15px;
 }
 
 .community_desc_left {
@@ -658,9 +757,7 @@ p {
   display: grid;
   grid-template-columns: repeat(5, auto);
   grid-gap: 16px;
-}
 
-.grid_container {
   img {
     max-width: 100%;
     border-radius: 16px;
@@ -668,82 +765,67 @@ p {
   }
 }
 
+/************************* GET_STARTED SECTION-9 ************************/
+
 .getStarted {
   background-color: #282c34;
-}
 
-.getStarted_content {
-  max-width: 900px;
-  //   height: 300px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-}
-
-.getStarted {
   .heading {
     margin-bottom: 20px;
     color: #61dafb;
-    text-align: center;
   }
-}
 
-.getStarted {
   ol {
     color: white;
   }
-}
 
-.getStarted {
-  .steps {
-    li {
-      margin-bottom: 10px;
-    }
-  }
-}
-
-.getStarted {
-  .steps {
-    align-self: center;
-  }
-}
-
-.getStarted {
   li::marker {
     color: #525860;
   }
-}
 
-.getStarted {
   .steps {
+    // align-self: center;
     li {
+      margin-bottom: 10px;
       font-size: 28px;
-    }
-  }
-}
 
-.getStarted {
-  .steps {
+      .step_name {
+        margin-bottom: 20px;
+        font-weight: 300;
+      }
+    }
+
     p {
       font-size: 17px;
     }
   }
-}
 
-.getStarted .terminal {
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  border-top: 1px solid gray;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 30px 0;
-  position: relative;
-  width: 600px;
-}
+  .terminal {
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    border-top: 1px solid gray;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 30px 0;
+    position: relative;
+    width: 600px;
 
-.getStarted {
+    code {
+      font-size: 18px;
+      position: relative;
+      margin: 5px 0;
+    }
+
+    code:first-child:before {
+      color: gray;
+      content: ">";
+      left: -15px;
+      position: absolute;
+    }
+  }
+
   .terminal:before {
     color: gray;
     content: "○ ○ ○";
@@ -755,108 +837,92 @@ p {
   }
 }
 
-.getStarted {
-  .terminal {
-    code:first-child:before {
-      color: gray;
-      content: ">";
-      left: -15px;
-      position: absolute;
+.getStarted_content {
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  border: 2px dotted green;
+}
+
+/************************* FOOTER ************************/
+
+.footer {
+  background-color: #20232a;
+
+  .footer_content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 34px 32px;
+
+    .footer_links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      a {
+        text-decoration: none;
+        color: white;
+        line-height: 1.44;
+      }
+
+      .footer_col {
+        ul {
+          list-style: none;
+          padding-left: 0px;
+          margin: 0px;
+          font-size: 14px;
+        }
+
+        .footer_title {
+          color: #858a96;
+          font-size: 14px;
+          font-weight: 500;
+          text-transform: uppercase;
+          margin: 0 0 8px;
+        }
+
+        .footer_item {
+          padding-top: 8px;
+
+          a {
+            color: rgb(235, 237, 240);
+          }
+        }
+      }
+    }
+
+    .footer_bottom {
+      margin: 30px 0px;
+
+      a {
+        text-decoration: none;
+        color: #858a96;
+      }
+
+      .meta_open_source {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+
+        .meta_icon {
+          display: flex;
+          align-items: center;
+        }
+      }
+    }
+
+    .footer_copyright {
+      text-align: center;
+      color: #858a96;
+      font-size: 13px;
+      letter-spacing: 0px;
     }
   }
 }
 
-code {
-  font-size: 18px;
-  position: relative;
-  margin: 5px 0;
-}
-
-.step_name {
-  margin-bottom: 20px;
-  font-weight: 300;
-}
-
-.footer {
-  background-color: #20232a;
-}
-
-.footer_content {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 34px 32px;
-}
-
-.footer {
-  .footer_title {
-    color: #858a96;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-    margin: 0 0 8px;
-  }
-}
-
-.footer_links {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.footer_links {
-  a {
-    text-decoration: none;
-    color: white;
-    line-height: 1.44;
-  }
-}
-
-.footer_col {
-  ul {
-    list-style: none;
-    padding-left: 0px;
-    margin: 0px;
-    font-size: 14px;
-  }
-}
-
-.footer_item {
-  padding-top: 8px;
-}
-
-.footer_item a {
-  color: rgb(235, 237, 240);
-}
-
-.footer_bottom {
-  margin: 30px 0px;
-}
-
-.footer_bottom {
-  a {
-    text-decoration: none;
-    color: #858a96;
-  }
-}
-
-.meta_open_source {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-}
-
-.meta_icon {
-  display: flex;
-  align-items: center;
-}
-
-.footer_copyright {
-  text-align: center;
-  color: #858a96;
-  font-size: 13px;
-  letter-spacing: 0px;
-}
 
 @media screen and (max-width: 1200px) {
   .search-icon {
@@ -895,110 +961,6 @@ code {
 
   .lightMode_icon {
     display: none;
-  }
-
-  .sidebar_lightMode_icon:hover {
-    background-color: #444950;
-    border-radius: 50%;
-  }
-
-  .sidebar_close_btn:hover {
-    background-color: #444950;
-  }
-
-  .navbar-sidebar-brand {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-    background-color: #20232a;
-  }
-
-  .navbar-sidebar-brand_left {
-    display: flex;
-    align-items: center;
-  }
-
-  .navbar-sidebar-links {
-    color: #606770;
-    font-family: "OptimisticDisplay";
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 17px;
-    width: 100%;
-  }
-
-  .navbar-sidebar-links a {
-    // position: relative;
-    text-decoration: none;
-    color: #606770;
-    font-family: "OptimisticDisplay";
-    font-weight: 400;
-    width: 100%;
-    text-align: start;
-  }
-
-  .navbar-sidebar-item {
-    padding: 4px 12px;
-    width: 100%;
-  }
-
-  .navbar-sidebar-item:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
-  }
-
-  .sidebar_dropdown_title {
-    display: flex;
-    // align-items: flex-start;
-    justify-content: space-between;
-    width: 100%;
-    gap: 5px;
-  }
-
-  .sidebar_dropdown_items {
-    display: none;
-    width: 100% !important;
-    // position: absolute;
-    // left: 340px;
-    top: 0px;
-    // background-color: red;
-    color: gray;
-    text-align: start;
-    list-style: none;
-    font-weight: 100;
-    // padding: 10px 0px;
-    border-radius: 10px;
-    width: 180px;
-    font-size: 0.975rem;
-  }
-
-  .hide {
-    display: none;
-  }
-
-  .sidebar_dropdown_items li {
-    width: 100%;
-    margin: 5px 0px;
-    padding: 5px;
-    font-size: 13px;
-  }
-
-  .sidebar_dropdown {
-    position: relative;
-  }
-
-  .sidebar_dropdown_items {
-    li:hover {
-      background-color: rgb(230, 228, 228);
-      border-radius: 5px;
-      color: black;
-    }
   }
 }
 
@@ -1274,7 +1236,6 @@ code {
 }
 
 @media screen and (max-width: 576px) {
-
   .nativeDevelopment_left {
     width: 100%;
   }
@@ -1305,9 +1266,10 @@ code {
     align-items: flex-start;
   }
 
-  .headerHero_left .title, .headerHero_left .tagline {
+  .headerHero_left .title,
+  .headerHero_left .tagline {
     text-align: start;
-}
+  }
 
   .actionButton {
     width: 100%;
@@ -1320,8 +1282,6 @@ code {
   .nativeApps_left {
     width: 100%;
   }
-
-  
 
   .nativeDevelopment {
     padding: 50px 20px;
